# alterya-slava-shor-asignment

./: .gitignore  README.md  pyproject.toml
src/alterya/: api.py  main.py  service.py
tests/: rest.py
